--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,7 +1,8 @@
-flask==3.0.2
-flask-cors==4.0.0
 selenium==4.18.1
 webdriver-manager==4.0.1
 python-dotenv==1.0.1
 beautifulsoup4==4.13.3
 requests==2.32.3
+fastapi==0.115.11
+uvicorn==0.34.0
+pydantic==2.10.6
